--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>iPhone Lock Screen</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/CSS/LockScreen.css">
 </head>
 <body>
     <div class="box">
@@ -19,7 +19,7 @@
                         <div class="imgBx">
                             <img src="img.jpg" alt="Profile"> 
                         </div>
-                        <p>Alex is calling</p>
+                        <p>Kevin is calling</p>
                     </div>
                     <div class="action">
                         <ion-icon name="call" class="red"></ion-icon>
@@ -29,7 +29,7 @@
             </div>
 
             <div class="island_bottom">
-                <a href="home.html" id="editBtn" class="content2"></a>
+                <a href="/HTML/home.html" id="editBtn" class="content2"></a>
             </div>
     </div>
         <i class="btn btn1"></i>
@@ -39,6 +39,6 @@
   </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="script.js"></script>
+    <script src="/JS/LockScreen.js"></script>
 </body>
 </html>
