--- a/HTML/apps/Tiktok/TikTok.html
+++ b/HTML/apps/Tiktok/TikTok.html
@@ -1,16 +1,9 @@
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Youtube</title>
-  <link rel="stylesheet" href="styleyt.css">
+  <title>Iphone Mock | TikTok</title>
+  <link rel="stylesheet" href="/CSS/TikTok.css">
 </head>
 <body>
     <div class="box">
@@ -18,7 +11,7 @@
             <div class="island_popup">
                 <div class="content">
                     <div class="detais">
-                        <p>Alex is calling</p>
+                        <p>Kevin is calling</p>
                     </div>
                     <div class="action">
                         <ion-icon name="call" class="red"></ion-icon>
@@ -26,20 +19,12 @@
                     </div>
                 </div>
             </div>
-      <div class="inner-text">
-          <p>Playing trending video</p>
-        <section class="player">
-          <div class="video-wrap" id="videoWrap">
-            <iframe id="ytplayer" src="https://www.youtube.com/embed/1prd93NWgyM?si=cbz5DK1t9Q8Sfrj2" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-        </section>
+      <div class="island_bottom" onclick="openApp('home.html')">
+         <a href="home.html" id="editBtn" class="content2"></a>
       </div>
-            <div class="island_bottom">
-                <a href="home.html" id="editBtn" class="content2"></a>
-            </div>
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <script src="scripthome.js"></script>
+  <script src="/JS/TikTok.js"></script>
 </body>
 </html>
