--- a/HTML/home.html
+++ b/HTML/home.html
@@ -30,42 +30,42 @@
           <ion-icon name="logo-tiktok"></ion-icon>
           <span>TikTok</span>
         </div>
-        <div class="app" onclick="openApp('/html/index.html')">
+        <div class="app" onclick="openApp('/index.html')">
           <ion-icon name="lock-closed-outline"></ion-icon>
           <span>Lock</span>
         </div>
-        <div class="app" onclick="openApp('/html/index.html')">
+        <div class="app" onclick="openApp('/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
         <div class="widget" onclick="openWidget('/html/apps/weather/weather.html')">
-          <div class="widget-content"><ion-icon name="calendar-outline"></ion-icon><span>Calendar</span></div>
+          <div class="widget-content"><ion-icon name="cloudy-night-outline"></ion-icon><span>Weather</span></div>
         </div>
-        <div class="app" onclick="openApp('/html/index.html')">
+        <div class="app" onclick="openApp('/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/html/index.html')">
+        <div class="app" onclick="openApp('/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/html/index.html')">
+        <div class="app" onclick="openApp('/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/html/index.html')">
+        <div class="app" onclick="openApp('/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/html/index.html')">
+        <div class="app" onclick="openApp('/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/html/index.html')">
+        <div class="app" onclick="openApp('/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/html/index.html')">
+        <div class="app" onclick="openApp('/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
@@ -73,7 +73,7 @@
             
       </div>
       <div class="island_bottom">
-                <a href="index.html" id="editBtn" class="content2"></a>
+                <a href="/Index.html" id="editBtn" class="content2"></a>
             </div></div>
         <i class="btn btn1"></i>
         <i class="btn btn2"></i>
