--- a/HTML/apps/Weather/weather.html
+++ b/HTML/apps/Weather/weather.html
@@ -3,20 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <title>Iphone Mock | Weather</title>
-  <link rel="stylesheet" href="/CSS/TikTok.css">
+  <link rel="stylesheet" href="/CSS/wheather.css">
 </head>
 <body>
-    <div class="box">
-        <div class="inner-home">
-            <div class="island_popup">
-                <div class="content">
-                    <div class="detais">
-                        <p>Kevin is calling</p></div><div class="action"><ion-icon name="call" class="red"></ion-icon><ion-icon name="call" class="green"></ion-icon></div></div></div>
-      <div class="island_bottom" onclick="openApp('home.html')">
-         <a href="home.html" id="editBtn" class="content2"></a>
+  <div class="box">
+    <div class="inner-home">
+      <div class="island_popup">
+        <div class="content">
+          <div class="detais">
+            <p>Kevin is calling</p>
+          </div>
+          <div class="action">
+            <ion-icon name="call" class="red"></ion-icon>
+            <ion-icon name="call" class="green"></ion-icon>
+          </div>
+          
+        </div>
+        
       </div>
+
+      <div class="island_bottom" onclick="openApp('home.html')">
+        <a href="home.html" id="editBtn" class="content2"></a>
+      </div>
+<div class="scroll-container">
+  <div class="wheather-Name">
+<h3>Weather</h3>
+  </div>
+ <div class="app-grid">
+        <div class="app"><h3>New York, NY</h3><p id="weather-temp-New-York">--°F</p></div>
+        <div class="app"><h3>Los Angeles, CA</h3><p id="weather-temp-LA">--°F</p></div>
+        <div class="app"><h3>Chicago, IL</h3><p id="weather-temp-Chicago">--°F</p></div>
+        <div class="app"><h3>Houston, TX</h3><p id="weather-temp-Houston">--°F</p></div>
+        <div class="app"><h3>Phoenix, AZ</h3><p id="weather-temp-Phoenix">--°F</p></div>
+        <div class="app"><h3>Philadelphia, PA</h3><p id="weather-temp-Philadelphia">--°F</p></div>
+        <div class="app"><h3>San Antonio, TX</h3><p id="weather-temp-San-Antonio">--°F</p></div>
+        <div class="app"><h3>San Diego, CA</h3><p id="weather-temp-San-Diego">--°F</p></div>
+        <div class="app"><h3>Dallas, TX</h3><p id="weather-temp-Dallas">--°F</p></div>
+        <div class="app"><h3>San Jose, CA</h3><p id="weather-temp-San-Jose">--°F</p></div>
+        <div class="app"><h3>Austin, TX</h3><p id="weather-temp-Austin">--°F</p></div>
+        <div class="app"><h3>Jacksonville, FL</h3><p id="weather-temp-Jacksonville">--°F</p></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  <!-- Add as many apps as you want -->
+</div>
+
+  </div>
+
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
   <script src="/JS/Weather.js"></script>
 </body>
 </html>
