--- a/HTML/apps/Tiktok/TikTok.html
+++ b/HTML/apps/Tiktok/TikTok.html
@@ -19,8 +19,8 @@
                     </div>
                 </div>
             </div>
-      <div class="island_bottom" onclick="openApp('home.html')">
-         <a href="home.html" id="editBtn" class="content2"></a>
+      <div class="island_bottom" onclick="openApp('/Iphone-Mock/HTML/home.html')">
+         <a href="/Iphone-Mock/HTML/home.html" id="editBtn" class="content2"></a>
       </div>
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
