--- a/HTML/apps/Youtube/YouTube.html
+++ b/HTML/apps/Youtube/YouTube.html
@@ -20,10 +20,9 @@
                 </div>
             </div>
 
-            <div class="island_bottom">
-                <a href="/HTML/home.html" id="editBtn" class="content2"></a>
-            </div>
-
+      <div class="island_bottom" onclick="openApp('/Iphone-Mock/HTML/home.html')">
+         <a href="/Iphone-Mock/HTML/home.html" id="editBtn" class="content2"></a>
+      </div>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script src="/JS/YouTube.js"></script>
