--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,8 @@
     <div class="box">
         <div class="inner">
             <div class="time-container">
-                <div id="date">Invalid Date</div>
-                <div id="time">Invalid Time</div>
+                <div id="date">-,- -</div>
+                <div id="time">-:--</div>
             </div>
 
             <div class="island_popup">
@@ -29,7 +29,7 @@
             </div>
 
             <div class="island_bottom">
-                <a href="/HTML/home.html" id="editBtn" class="content2"></a>
+                <a href="/MockPhone/HTML/home.html" id="editBtn" class="content2"></a>
             </div>
     </div>
         <i class="btn btn1"></i>
