--- a/HTML/apps/Weather/weather.html
+++ b/HTML/apps/Weather/weather.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Iphone Mock | Weather</title>
-  <link rel="stylesheet" href="/CSS/wheather.css">
+  <link rel="stylesheet" href="/Iphone-Mock/CSS/wheather.css">
 </head>
 <body>
   <div class="box">
@@ -54,6 +54,6 @@
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-  <script src="/JS/Weather.js"></script>
+  <script src="/Iphone-Mock/JS/Weather.js"></script>
 </body>
 </html>
