--- a/HTML/apps/Youtube/YouTube.html
+++ b/HTML/apps/Youtube/YouTube.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Iphone Mock | YouTube</title>
-  <link rel="stylesheet" href="/CSS/YouTube.css">
+  <link rel="stylesheet" href="/Iphone-Mock/CSS/YouTube.css">
 </head>
 <body>
     <div class="box">
@@ -25,6 +25,6 @@
       </div>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <script src="/JS/YouTube.js"></script>
+  <script src="/Iphone-Mock/JS/YouTube.js"></script>
 </body>
 </html>
