--- a/HTML/home.html
+++ b/HTML/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Iphone Mock | Home</title>
-  <link rel="stylesheet" href="/CSS/Home.css">
+  <link rel="stylesheet" href="/Iphone-Mock/CSS/Home.css">
 </head>
 <body>
     <div class="box">
@@ -83,6 +83,6 @@
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <script src="/JS/home.js"></script>
+  <script src="/Iphone-Mock/JS/home.js"></script>
 </body>
 </html>
