--- a/HTML/home.html
+++ b/HTML/home.html
@@ -22,50 +22,50 @@
 
 
       <div class="app-grid">
-        <div class="app" onclick="openApp('/html/apps/YouTube/YouTube.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/html/apps/YouTube/YouTube.html')">
           <ion-icon name="logo-youtube"></ion-icon>
           <span>YouTube</span>
         </div>
-        <div class="app" onclick="openApp('/html/apps/tiktok/tiktok.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/html/apps/tiktok/tiktok.html')">
           <ion-icon name="logo-tiktok"></ion-icon>
           <span>TikTok</span>
         </div>
-        <div class="app" onclick="openApp('/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
           <ion-icon name="lock-closed-outline"></ion-icon>
           <span>Lock</span>
         </div>
-        <div class="app" onclick="openApp('/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="widget" onclick="openWidget('/html/apps/weather/weather.html')">
+        <div class="widget" onclick="openWidget('/Iphone-Mock/html/apps/weather/weather.html')">
           <div class="widget-content"><ion-icon name="cloudy-night-outline"></ion-icon><span>Weather</span></div>
         </div>
-        <div class="app" onclick="openApp('/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
@@ -73,7 +73,7 @@
             
       </div>
       <div class="island_bottom">
-                <a href="/Index.html" id="editBtn" class="content2"></a>
+                <a href="/Iphone-Mock/Index.html" id="editBtn" class="content2"></a>
             </div></div>
         <i class="btn btn1"></i>
         <i class="btn btn2"></i>
