--- a/HTML/home.html
+++ b/HTML/home.html
@@ -22,50 +22,50 @@
 
 
       <div class="app-grid">
-        <div class="app" onclick="openApp('/Iphone-Mock/HTML/apps/YouTube/YouTube.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/HTML/apps/Youtube/YouTube.html')">
           <ion-icon name="logo-youtube"></ion-icon>
           <span>YouTube</span>
         </div>
-        <div class="app" onclick="openApp('/Iphone-Mock/HTML/apps/tiktok/tiktok.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/HTML/apps/Tiktok/TikTok.html')">
           <ion-icon name="logo-tiktok"></ion-icon>
           <span>TikTok</span>
         </div>
-        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/Index.html')">
           <ion-icon name="lock-closed-outline"></ion-icon>
           <span>Lock</span>
         </div>
-        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/Index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
         <div class="widget" onclick="openWidget('/Iphone-Mock/HTML/apps/Weather/weather.html')">
           <div class="widget-content"><ion-icon name="cloudy-night-outline"></ion-icon><span>Weather</span></div>
         </div>
-        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/Index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/Index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/Index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/Index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/Index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/Index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
-        <div class="app" onclick="openApp('/Iphone-Mock/index.html')">
+        <div class="app" onclick="openApp('/Iphone-Mock/Index.html')">
           <ion-icon name="help-circle-outline"></ion-icon>
           <span>test</span>
         </div>
