--- a/Index.html
+++ b/Index.html
@@ -28,9 +28,25 @@
                 </div>
             </div>
 
-            <div class="island_bottom">
-                <a href="/Iphone-Mock/HTML/home.html" id="editBtn" class="content2"></a>
-            </div>
+<div class="island_bottom">
+    <a id="unlockBtn" class="content2"></a>
+</div>
+
+<!-- Passcode popup -->
+<div id="passcodeScreen" class="passcode-popup">
+    <div class="passcode-box">
+        <h3>Enter Passcode</h3>
+        <div id="passcodeDots" class="dots">
+            <span></span><span></span><span></span><span></span>
+        </div>
+        <div class="keypad">
+            <button>1</button><button>2</button><button>3</button>
+            <button>4</button><button>5</button><button>6</button>
+            <button>7</button><button>8</button><button>9</button>
+            <button id="clear">⌫</button><button>0</button><button id="cancel">×</button>
+        </div>
+    </div>
+</div>
     </div>
         <i class="btn btn1"></i>
         <i class="btn btn2"></i>
