--- a/HTML/apps/Weather/weather.html
+++ b/HTML/apps/Weather/weather.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Iphone Mock | Weather</title>
-  <link rel="stylesheet" href="CSS/wheather.css">
+  <link rel="stylesheet" href="/CSS/wheather.css">
 </head>
 <body>
   <div class="box">
