feat(LockScreen): added event-listening fingerprint button that pushes to home screen

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <button>4</button><button>5</button><button>6</button>
             <button>7</button><button>8</button><button>9</button>
             <button id="clear">⌫</button><button>0</button><button id="cancel">×</button>
+            <button id="fingerprint">
+                <ion-icon name="finger-print-outline"></ion-icon>
+            </button>
         </div>
     </div>
 </div>
