--- a/HTML/apps/Weather/weather.html
+++ b/HTML/apps/Weather/weather.html
@@ -30,18 +30,18 @@
 <h3>Weather</h3>
   </div>
  <div class="app-grid">
-        <div class="app"><h3>New York, NY</h3><p id="weather-temp-New-York">--°F</p></div>
-        <div class="app"><h3>Los Angeles, CA</h3><p id="weather-temp-LA">--°F</p></div>
-        <div class="app"><h3>Chicago, IL</h3><p id="weather-temp-Chicago">--°F</p></div>
-        <div class="app"><h3>Houston, TX</h3><p id="weather-temp-Houston">--°F</p></div>
-        <div class="app"><h3>Phoenix, AZ</h3><p id="weather-temp-Phoenix">--°F</p></div>
-        <div class="app"><h3>Philadelphia, PA</h3><p id="weather-temp-Philadelphia">--°F</p></div>
-        <div class="app"><h3>San Antonio, TX</h3><p id="weather-temp-San-Antonio">--°F</p></div>
-        <div class="app"><h3>San Diego, CA</h3><p id="weather-temp-San-Diego">--°F</p></div>
-        <div class="app"><h3>Dallas, TX</h3><p id="weather-temp-Dallas">--°F</p></div>
-        <div class="app"><h3>San Jose, CA</h3><p id="weather-temp-San-Jose">--°F</p></div>
-        <div class="app"><h3>Austin, TX</h3><p id="weather-temp-Austin">--°F</p></div>
-        <div class="app"><h3>Jacksonville, FL</h3><p id="weather-temp-Jacksonville">--°F</p></div>
+        <a href="/Iphone-Mock/HTML/weather/weather-ny.html" class="app"><h3>New York, NY</h3><p id="weather-temp-New-York">--°F</p></a>
+        <a href="/Iphone-Mock/HTML/weather/weather-la.html" class="app"><h3>Los Angeles, CA</h3><p id="weather-temp-LA">--°F</p></a>
+        <a href="/Iphone-Mock/HTML/weather/weather-co.html" class="app"><h3>Chicago, IL</h3><p id="weather-temp-Chicago">--°F</p></a>
+        <a href="/Iphone-Mock/HTML/weather/weather-houston.html" class="app"><h3>Houston, TX</h3><p id="weather-temp-Houston">--°F</p></a>
+        <a href="/Iphone-Mock/HTML/weather/weather-phoenix.html" class="app"><h3>Phoenix, AZ</h3><p id="weather-temp-Phoenix">--°F</p></a>
+        <a href="/Iphone-Mock/HTML/weather/weather-philly.html" class="app"><h3>Philadelphia, PA</h3><p id="weather-temp-Philadelphia">--°F</p></a>
+        <a href="/Iphone-Mock/HTML/weather/weather-sana.html" class="app"><h3>San Antonio, TX</h3><p id="weather-temp-San-Antonio">--°F</p></a>
+        <a href="/Iphone-Mock/HTML/weather/weather-sand.html" class="app"><h3>San Diego, CA</h3><p id="weather-temp-San-Diego">--°F</p></a>
+        <a href="/Iphone-Mock/HTML/weather/weather-dallas.html" class="app"><h3>Dallas, TX</h3><p id="weather-temp-Dallas">--°F</p></a>
+        <a href="/Iphone-Mock/HTML/weather/weather-sandj.html" class="app"><h3>San Jose, CA</h3><p id="weather-temp-San-Jose">--°F</p></a>
+        <a href="/Iphone-Mock/HTML/weather/weather-austin.html" class="app"><h3>Austin, TX</h3><p id="weather-temp-Austin">--°F</p></a>
+        <a href="/Iphone-Mock/HTML/weather/weather-jackson.html" class="app"><h3>Jacksonville, FL</h3><p id="weather-temp-Jacksonville">--°F</p></a>
         </div>
       </div>
     </div>
