--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,8 @@
     <link rel="stylesheet" href="/Iphone-Mock/CSS/LockScreen.css">
 </head>
 <body>
+    <button id="rotateBtn">↻ Rotate Phone</button>
+    <div class="phone-rotate-wrapper">
     <div class="box">
         <div class="inner">
             <div class="time-container">
@@ -45,17 +48,17 @@
             <button class="fingerprint" id="fingerprint">
             <ion-icon name="finger-print-outline"></ion-icon>
             <ion-icon name="checkmark-outline" class="checkmark"></ion-icon>
-            </button>
-
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                        <i class="btn btn1"></i>
+            <i class="btn btn2"></i>
+            <i class="btn btn3"></i>
+            <i class="rightSideBtn"></i>
         </div>
     </div>
-</div>
-    </div>
-        <i class="btn btn1"></i>
-        <i class="btn btn2"></i>
-        <i class="btn btn3"></i>
-        <i class="rightSideBtn"></i>
-  </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="/Iphone-Mock/JS/LockScreen.js"></script>
