--- a/HTML/apps/Tiktok/TikTok.html
+++ b/HTML/apps/Tiktok/TikTok.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="/Iphone-Mock/CSS/TikTok.css">
 </head>
 <body>
+<button id="rotateBtn">↻ Rotate Phone</button>
+    <div class="phone-rotate-wrapper">
     <div class="box">
         <div class="inner-home">
             <div class="island_popup">
@@ -22,7 +24,7 @@
       <div class="island_bottom" onclick="openApp('/Iphone-Mock/HTML/home.html')">
          <a href="/Iphone-Mock/HTML/home.html" id="editBtn" class="content2"></a>
       </div>
-
+        </div>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script src="/Iphone-Mock/JS/TikTok.js"></script>
