--- a/HTML/apps/Weather/weather.html
+++ b/HTML/apps/Weather/weather.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="/Iphone-Mock/CSS/wheather.css">
 </head>
 <body>
+<button id="rotateBtn">↻ Rotate Phone</button>
+    <div class="phone-rotate-wrapper">
   <div class="box">
     <div class="inner-home">
       <div class="island_popup">
@@ -48,7 +50,7 @@
   </div>
 </div>
 </div>
-
+</div>
   </div>
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
