--- a/HTML/home.html
+++ b/HTML/home.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="/Iphone-Mock/CSS/Home.css">
 </head>
 <body>
+<button id="rotateBtn">↻ Rotate Phone</button>
+    <div class="phone-rotate-wrapper">
     <div class="box">
         <div class="inner-home">
             <div class="island_popup">
@@ -73,14 +75,10 @@
             
       </div>
       <div class="island_bottom">
-                <a href="/Iphone-Mock/Index.html" id="editBtn" class="content2"></a>
+                <a href="/Iphone-Mock/index.html" id="editBtn" class="content2"></a>
             </div></div>
-        <i class="btn btn1"></i>
-        <i class="btn btn2"></i>
-        <i class="btn btn3"></i>
-        <i class="rightSideBtn"></i>
   </div>
-
+</div>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script src="/Iphone-Mock/JS/home.js"></script>
