--- a/HTML/weather/weather-sana.html
+++ b/HTML/weather/weather-sana.html
@@ -6,6 +6,8 @@
   <link rel='stylesheet' href='/Iphone-Mock/CSS/weathers.css'>
 </head>
 <body>
+<button id="rotateBtn">↻ Rotate Phone</button>
+    <div class="phone-rotate-wrapper">
   <div class='box'>
     <div class='inner-home'>
       <div class='island_popup'>
@@ -28,7 +30,7 @@
       </div>
     </div>
   </div>
-
+</div>
   <script>
     // Fetch live weather using Open-Meteo (no API key)
     async function getWeather() {
@@ -38,7 +40,7 @@
         const res = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current=temperature_2m`);
         const data = await res.json();
         const tempC = data.current.temperature_2m;
-        const tempF = (tempC * 9/5 + 32).toFixed(1);
+        const tempF = Math.round(tempC * 9/5 + 32);
         document.getElementById('temperature').textContent = `${tempF}°F`;
       } catch (e) {
         document.getElementById('temperature').textContent = 'Error loading';
