--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/Iphone-Mock/CSS/LockScreen.css">
 </head>
 <body>
-    <button id="rotateBtn">↻ Rotate Phone</button>
+<button id="rotateBtn">↻ Rotate Phone</button>
     <div class="phone-rotate-wrapper">
     <div class="box">
         <div class="inner">
@@ -15,7 +15,6 @@
                 <div id="date">-, - -</div>
                 <div id="time">-:--</div>
             </div>
-
             <div class="island_popup">
                 <div class="content">
                     <div class="detais">
@@ -30,9 +29,9 @@
                     </div>
                 </div>
             </div>
-
-<div class="island_bottom">
-    <a id="unlockBtn" class="content2"></a>
+    <div class="island_bottom">
+        <a id="unlockBtn" class="content2"></a>
+    </div>
 </div>
 <div id="passcodeScreen" class="passcode-popup">
     <div class="passcode-box">
@@ -53,10 +52,6 @@
                     </div>
                 </div>
             </div>
-                        <i class="btn btn1"></i>
-            <i class="btn btn2"></i>
-            <i class="btn btn3"></i>
-            <i class="rightSideBtn"></i>
         </div>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
